# EmberGL

./: CMakeLists.txt  README.md
src/: main.cpp
src/ember/: ember.hpp  gfx.cpp  window.cpp
